# aoc

./: LICENSE
2022/: Cargo.toml
2022/day01/: Cargo.toml
2022/day01/benches/: bench.rs
2022/day01/src/: main.rs  part1.rs  part2.rs
2022/day02/: Cargo.toml
2022/day02/benches/: bench.rs
2022/day02/src/: main.rs  part1.rs  part2.rs
2022/day03/: Cargo.toml
2022/day03/benches/: bench.rs
2022/day03/src/: main.rs  part1.rs  part2.rs
2022/day04/: Cargo.toml
2022/day04/benches/: day04.rs
2022/day04/src/: lib.rs  main.rs  part1.rs  part2.rs
2022/day05/: Cargo.toml
2022/day05/benches/: day05.rs
2022/day05/src/: part1.rs  part2.rs
