[package]
name = "day04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
atoi_radix10 = { git = "https://github.com/gilescope/atoi_radix10", features = ["nightly", "simd"] } 

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day04"
harness = false
